<resources>
    <string name="app_name">Where2.go</string>

    <!-- base url -->
    <string name="api_base_url">http://95.85.13.177</string>
    <string name="api_ai_access_token">741803b54bf5422292a7c2d875dc4716</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout %s</string>
    <string name="action_test_location">My Location</string>
    <string name="action_rate">Tap to rate</string>
    <string name="action_rate_btn">Rate</string>
    <string name="action_recommend">Recommend</string>

    <!-- Login -->
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="register">No account yet? Click here to create one</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="placeholder_description">Fancy, Expensive</string>
    <string name="placeholder_long_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus, enim vitae dictum sodales, sem tortor lacinia ipsum, at vulputate nunc ligula sollicitudin eros</string>
    <string name="placeholder_title">Awesome place %d</string>
    <string name="place_predicted_rating">Prediction score: %s</string>
    <string name="place_price">Price: %s</string>
</resources>
