<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/keyline_1">

            <ImageView
                android:id="@+id/placeImage"
                android:layout_width="@dimen/keyline_11"
                android:layout_height="@dimen/keyline_11"
                android:scaleType="centerCrop"
                android:src="@drawable/place_placeholder"
                tools:src="@drawable/place_placeholder" />

            <LinearLayout
                android:id="@+id/ratingContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandWrapper"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_rate"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    tools:visibility="visible" />

                <!--<ImageView
                    android:layout_width="@dimen/keyline_2"
                    android:layout_height="@dimen/keyline_2"
                    android:src="@drawable/ic_star_black_24dp"
                    android:tint="@color/colorPrimary" />

                <ImageView
                    android:layout_width="@dimen/keyline_2"
                    android:layout_height="@dimen/keyline_2"
                    android:src="@drawable/ic_star_black_24dp"
                    android:tint="@color/colorPrimary" />

                <ImageView
                    android:layout_width="@dimen/keyline_2"
                    android:layout_height="@dimen/keyline_2"
                    android:src="@drawable/ic_star_black_24dp"
                    android:tint="@color/colorPrimary" />

                <ImageView
                    android:layout_width="@dimen/keyline_2"
                    android:layout_height="@dimen/keyline_2"
                    android:src="@drawable/ic_star_black_24dp"
                    android:tint="@color/colorPrimary" />

                <ImageView
                    android:layout_width="@dimen/keyline_2"
                    android:layout_height="@dimen/keyline_2"
                    android:src="@drawable/ic_star_black_24dp"
                    android:tint="@color/colorPrimary" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_1"
                android:layout_marginTop="@dimen/keyline_3"
                android:layout_toEndOf="@id/placeImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/placeTitle"
                    style="@style/PrimaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="@string/placeholder_title" />

                <TextView
                    android:id="@+id/placeCategories"
                    style="@style/SecondaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_description" />

            </LinearLayout>

            <TextView
                android:id="@+id/predictedRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ratingContainer"
                android:layout_alignParentEnd="true"
                tools:text="Prediction score: 4.5" />

            <LinearLayout
                android:id="@+id/expandWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/placeImage"
                android:layout_marginBottom="@dimen/keyline_1"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/keyline_half"
                    tools:text="Price: €€" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/ratingPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_height="@dimen/keyline_5"
                    app:np_max="5"
                    app:np_min="1"
                    app:np_orientation="horizontal"
                    app:np_width="@dimen/keyline_11"
                    tools:visibility="visible" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnConfirmRate"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_rate_btn" />


            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
